my-cookbook.css
.list-group-numbered { list-style: decimal inside; }
.list-group-alpha { list-style: lower-alpha inside; }
.list-group-roman { list-style: lower-roman inside; }
.list-group-alpha >li, .list-group-numbered >li { display: list-item }


.collapsing.width {
  -webkit-transition-property: width, visibility;
  transition-property: width, visibility;
  width: 0;
  height: auto;
    transition-property: height, visibility;
  -webkit-transition-duration: 0.35s;
  transition-duration: 0.35s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}


.card img {
  object-fit: cover; /* Do not scale the image */
  object-position: center; /* Center the image within the element */
  width: 100%;
  max-width:75vh;
  margin:auto;
  /*max-height: 250px;
  margin-bottom: 1rem;*/
}

svg.rotate180 {
	transform: rotate(180deg);
}

.wrapper {
    display: flex;
    width: 100%;
}

#ingredients {
	min-width: 20em;
	max-width: 20em;
    position: fixed;
    top: 56px;
    right: 0;
    /*height: calc(100vh - 56px);*/
    z-index: 999;
    /*transition: all 0.3s;*/
    transition: all 0s;
}

#collapesebutton {
	position: sticky;
    right: 0;
    top: 56px;
    width: 3em;
}

#steps {
	width: calc(100% - 20em);
}

#steps.full {
	width: 100%;
}

